Fix T61376 Group Node Node Editor theme property is missing alpha channel

It is now possible to adjust the group node background alpha.
The defaults are the same as before, but you can now adjust the alpha
level via the theme preferences (and the alpha value is no longer hard
coded).