source/blender/editors/space_node/node_draw.c
@@ -1307,7 +1307,7 @@ static void draw_group_overlay(const bContext *C, ARegion *ar)
 	/* shade node groups to separate them visually */
 	GPU_blend(true);
 
-	UI_GetThemeColorShadeAlpha4fv(TH_NODE_GROUP, 0, -70, color);
+	UI_GetThemeColorShadeAlpha4fv(TH_NODE_GROUP, 0, 0, color);
 	UI_draw_roundbox_corner_set(UI_CNR_NONE);
 	UI_draw_roundbox_4fv(true, rect.xmin, rect.ymin, rect.xmax, rect.ymax, 0, color);
 	GPU_blend(false);
